# AB_CodeReviewer

./: .ab-reviewer.yaml.example  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup_dev.py  test_workflow.py
.cursor/rules/: 00-core.mdc  01-pseudocode-first.mdc  40-testing-and-ci.mdc
.github/workflows/: ci.yml
Formula/: ab-reviewer.rb
ab_reviewer/: __init__.py  __main__.py  cli.py
ab_reviewer/ai/: __init__.py  gemini_client.py
ab_reviewer/config/: __init__.py  default_config.yaml
ab_reviewer/core/: __init__.py  config_loader.py  detector.py  enhanced_runner.py  gate_types.py  quality_gate.py  reporter.py  runner.py
ab_reviewer/tools/: __init__.py  python_tools.py
ab_reviewer/utils/: __init__.py  exceptions.py  git.py  logger.py  project_analyzer.py  report_generator.py  subprocess_utils.py
docs/: Critical_issue_solve_plan.md  ENHANCEMENT_SUMMARY.md  api-reference.md  project-design.md
docs/changes/: changes_0.1.0.md  changes_0.1.0_changelog.md
docs/test_project/: TESTING_WORKFLOW.md
tests/: __init__.py  test_cli.py  test_detector.py  test_gemini_client.py  test_runner.py  test_utils.py
tests/fixtures/non_python_project/: README.md
tests/fixtures/python_project/: main.py  pyproject.toml
